# stock-analyzer

./: .env  .gitignore  README.md  README_PROXY_SETUP.md  api.py  docker-compose.yml  generate_er_diagram.py  init-db.sql  project-introduction.md  requirements.txt  run-docker.bat  run-docker.sh  start-db.bat  stock_analyzer.py  stock_data_importer.py  stock_symbol_importer.py  utils.py
backend/: .env  .env.docker  .env.docker.example  .env.example  Dockerfile  __init__.py  api.py  chart_plotter.py  docker-compose.yml  generate_er_diagram.py  init-db.sql  mcp_agent.config.yaml  mcp_agent.secrets.yaml.example  migrate_prompts_to_db.py  models.py  pg_hba.conf  pyproject.toml  report_generator.py  requirements.txt  start-db.bat  stock_analyzer.py  stock_data_importer.py  stock_recommender.py  stock_symbol_importer.py  technical_indicator_calculator.py  technical_indicators.py  utils.py
backend/aiagent/: data_access.py  deepseek_augmented.py  deepseek_direct.py  evaluator_optimizer.py  factory.py  mcp_agent.py  prompt_builder.py
backend/batch/: run_batch.bat  stock_data_importer.py  stock_symbol_importer.py  technical_indicator_calculator.py
backend/docs/: ER.md
backend/prompts/: recommendation_prompt.json
backend/src/: api.py  chart_plotter.py  create_env.py  interfaces.py  models.py  stock_recommender.py
backend/src/aiagent/: data_access.py  deepseek_direct.py  interface.py  mcp_agent.config.yaml  mcp_agent.py  prompt_builder.py
backend/src/batch/: run_batch.bat  (+3 more)
backend/stock_analyzer_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+50 files in other folders)
