[project]
name = "stock-analyzer-backend"
version = "0.1.0"
description = "Stock analysis backend service"
authors = [
    {name = "Fumiyoshi To", email = "fumiyoshi.to@example.com"}
]
dependencies = [
    "pandas==2.3.1",
    "mpl-finance==0.10.1",
    "yfinance==0.2.65",
    "fastapi>=0.116.1",
    "sqlalchemy>=2.0.43",
    "dotenv>=0.9.9",
    "openai>=1.107.2",
    "mcp-agent>=0.1.22",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aiagent*", "batch*", "api*", "chart_plotter*", "interfaces*", "models*", "stock_recommender*", "technical_indicators*", "utils*"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
